removed exclamation mark

--- a/my webpage.html
+++ b/my webpage.html
@@ -16,7 +16,7 @@ strict.dtd">
 	</head>
 
 	<body>
-        <header>  Avarikioti Georgia!  </header>
+        <header>  Avarikioti Georgia  </header>
         
         <ul class="topnav" id="myTopnav">
             <li><a href="#about">About</a></li>
